--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,9 @@ url: "autoscoperm.slicer.org" # the base hostname & protocol for your site, e.g.
 #twitter_username: jekyllrb
 github_username:  BrownBiomechanics
 
+show_excerpts: true # set to true to show excerpts
+future: true  # allow events in the future (for calendar feed)
+
 # Build settings
 markdown: kramdown
 theme: minima
