ENH: Simplify banner consolidating Team/Call/Acknowledgments into About
This commit also partially reverts da729ab79 (ENH: Add support for adding
posts in "events" category) removing the now undeeded custom sizing
of the site title.

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,11 @@ github_username:  BrownBiomechanics
 show_excerpts: true # set to true to show excerpts
 future: true  # allow events in the future (for calendar feed)
 
+header_pages:
+- about.md
+- events/index.html
+- documentation.md
+
 # Build settings
 markdown: kramdown
 theme: minima
