--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,9 @@ header_pages:
 # Build settings
 markdown: kramdown
 theme: minima
-#plugins:
+plugins:
 #  - jekyll-feed
+  - jekyll-target-blank
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
