--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ future: true  # allow events in the future (for calendar feed)
 
 header_pages:
 - about.md
+- contact.md
 - events/index.html
 - documentation.md
 
